[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/menus/PlayerName.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/chancery.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/LocalGameLobby.gd" type="Script" id=3]

[node name="LocalGameLobby" type="MarginContainer"]
margin_left = 360.0
margin_top = 200.0
margin_right = 808.0
margin_bottom = 255.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 448.0
margin_bottom = 212.0

[node name="Players" type="Label" parent="VBoxContainer"]
margin_right = 448.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "Players"

[node name="PlayerList" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 448.0
margin_bottom = 163.0

[node name="Player1" parent="VBoxContainer/PlayerList" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 448.0
margin_bottom = 55.0
text = "Player 1"

[node name="Player2" parent="VBoxContainer/PlayerList" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 59.0
margin_right = 448.0
margin_bottom = 114.0
text = "Player 2"

[node name="StartGame" type="Label" parent="VBoxContainer"]
margin_top = 167.0
margin_right = 448.0
margin_bottom = 212.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
text = "Start game"
[connection signal="gui_input" from="VBoxContainer/StartGame" to="." method="_on_StartGame_gui_input"]
